# stockholm

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: encrypt.rs  main.rs  ransomware.rs
